# Copyright (C) 2011-2014 Daiki Ueno <ueno@gnu.org>
# Copyright (C) 2011-2014 Red Hat, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS =					\
	default					\
	act					\
	azik					\
	azik-jp106				\
	kzik					\
	tutcode					\
	tutcode-touch16x			\
	nicola					\
	tcode					\
	trycode					\
	kana					\
	$(NULL)

EXTRA_DIST =					\
	README.rules				\
	rule.mk					\
	$(NULL)

-include $(top_srcdir)/git.mk
