# Copyright (C) 2011-2013 Daiki Ueno <ueno@gnu.org>
# Copyright (C) 2011-2013 Red Hat, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

templatesdir = $(pkgdatadir)/templates

nobase_dist_templates_DATA =				\
	libkkc-data/tools/sortlm.py			\
	libkkc-data/tools/Makefile.am			\
	libkkc-data/configure.ac.in			\
	libkkc-data/data/Makefile.am			\
	libkkc-data/data/models/Makefile.sorted3	\
	libkkc-data/data/models/sorted3/metadata.json	\
	libkkc-data/data/models/text3/metadata.json	\
	libkkc-data/data/models/text2/metadata.json	\
	libkkc-data/data/models/sorted2/metadata.json	\
	libkkc-data/data/models/Makefile.sorted2	\
	libkkc-data/data/models/Makefile.am		\
	libkkc-data/Makefile.am				\
	$(NULL)

-include $(top_srcdir)/git.mk
